source/objects/Partner_Sold_Products__c/Partner_Sold_Products__c.object-meta.xml
<CustomObject>
    <description>Parnter manufactured products sold by the partner or reseller</description>
    <label>Partner Sold Products</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Sold Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>