source/objects/Partner_Sold_Products__c/fields/Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Price__c</fullName>
    <description>Quantity x Unit Price</description>
    <formula>Quantity__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated field = Quantity x Unit Price</inlineHelpText>
    <label>Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>