source/objects/Partner_Sold_Products__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where the Product is or will be located</description>
    <inlineHelpText>Where the Product is or will be located</inlineHelpText>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>