source/objects/Partner_Sold_Products__c/fields/Partner_Product__c.field-meta.xml
<CustomField>
    <fullName>Partner_Product__c</fullName>
    <label>Partner Product</label>
    <referenceTo>Partner_Product__c</referenceTo>
    <relationshipLabel>Partner Sold Products</relationshipLabel>
    <relationshipName>Partner_Sold_Products</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>