source/objects/Partner_Sold_Products__c/fields/Seller_Account__c.field-meta.xml
<CustomField>
    <fullName>Seller_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account that is selling the partner product.  Could be a reseller or the manufacturing partner.</description>
    <inlineHelpText>The account that is selling the partner product.  Could be a reseller or the manufacturing partner.</inlineHelpText>
    <label>Seller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Sold Products</relationshipLabel>
    <relationshipName>Partner_Sold_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>